hphp/hack/test/typecheck/reactive/parse_multiple9.php
<?hh // strict

<<__Rx, __Cipp>>
function f(): void {}
